--- a/config/services.yml
+++ b/config/services.yml
@@ -1,6 +1,5 @@
-parameters:
-  db:
-    url: 'mysql://user:password@localhost:3306/tableName?charset=utf8'
+imports:
+  - { resource: parameters.dist.yml }
 
 services:
   dbal:
